<resources>
    <string name="app_name">Daily Family</string>
    <string name="email_prompt">Choose a Email</string>
    <string name="payment_prompt">Choose a Payment Mode</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="occupation">Occupation</string>
    <string name="nid_no">NID NO</string>
    <string name="email_address">Email Address</string>
    <string name="father_name">Father Name</string>
    <string name="address">Address</string>
    <string name="edit">EDIT</string>
    <string name="send_money">SEND Money</string>
    <string name="log_out_title_bagnla">Logout</string>
    <string name="log_out_ok_bagnla">OK</string>
    <string name="log_out_cancel_bagnla">Cancel</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="email_id">Email ID</string>
    <string name="email">Email</string>
    <string name="customer_care">Phone</string>
    <string name="lb_contact_email"><u>dailyfamilym22@gmail.com</u></string>
    <string name="lb_channel_banking_address_text">Maijdee Court, Sadar, Noakhali-3800</string>
    <string name="lb_accountinfo">
        Account Title : ASHIK MAHMUD MD NAZMUL HASAN MD SHOFIQUL ISLAM\nAccount no: 20507770207935510\nBank Name: Islami Bank Bangladesh Ltd (IBBL)\nBranch Name: Agent Banking\nRouting No: 125270607\nMobile No: 01676132935
    </string>
    <string name="lb_helpline">01816028491</string>
    <string name="developed_by_emon_raihan">Developed by: Emon Raihan</string>
    <string name="about_us">Daily Family</string>
    <string name="contact_informatiom">Contact Informatiom</string>
    <string name="title">Title</string>
    <string name="statement_search">Statement Search</string>
    <string name="enter_invoice_no">Enter Invoice No</string>
    <string name="zero">0.0</string>
    <string name="profile">Profile</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="please_enter_email_id">Please Enter Your Email Address</string>
    <string name="about">About Us</string>
    <string name="developer_information">Developer Information</string>
    <string name="positive_thinkers_unity">Daily Family</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="upload_image">Upload Image</string>
    <string name="new_member_registration">New Member Registration</string>
    <string name="yourname">Your Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="passwordchange">Password Change</string>
    <string name="already_a_member_login">Already a Member? Login</string>
    <string name="register">Register</string>
    <string name="member_name">Member Name</string>
    <string name="member">Mess Members</string>
    <string name="raihan_mahamud_emon">Raihan Mahamud Emon</string>
    <string name="organization">Organization</string>
    <string name="era_infotech_ltd">ERA-InfoTech Ltd</string>
    <string name="software_engineer_android_amp_ios"><![CDATA[Software Engineer (Android & IOS)]]></string>
    <string name="_01816028491">01816028491</string>
    <string name="mobile_no_2">Mobile No-2</string>
    <string name="_01516790441">01516790441</string>
    <string name="blogspot">Blogspot</string>
    <string name="www_emonra_blogspot_com"><u>www.emonra.blogspot.com</u></string>
    <string name="emonrait_gmail_com"><u>emonrait@gmail.com</u></string>
    <string name="gulshan_02_dhaka_1212">Gulshan-02, Dhaka-1212</string>
    <string name="facebook">Facebook</string>
    <string name="www_facebook_com_emon_raihan"><u>www.facebook.com/emon.raihan</u></string>
    <string name="_0_00">0.00 ৳</string>
    <string name="emon_raihan">Emon Raihan</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="welcome_to_the_positive_thinkers_unity">Welcome To The Daily Family</string>
    <string name="enter_your_user_id">Enter Your User ID</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="login">login</string>
    <string name="remember_me">Remember Me</string>
    <string name="notification">Notification</string>
    <string name="notice">Notice</string>
    <string name="_1_your_january_month_payment_2000_tk_is_completed">1. Your January Month Payment 2000 Tk is Completed.</string>
    <string name="regards_and_thanks_by">Regards and Thanks By</string>
    <string name="positive_thinkers_unity_authority">Daily Family Authority</string>
    <string name="balance">Balance</string>
    <string name="_0_00_u09f3">৳</string>
    <string name="please_wait">Please Wait…</string>

    <string name="biometric_title">Login</string>
    <string name="biometric_subtitle">Login to PDaily Family App</string>
    <string name="biometric_description">Place your finger on the device home button to verify your identity</string>
    <string name="biometric_negative_button_text">Login With Email</string>


    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>
    <string name="balance_informatiom">Balance Informatiom</string>
    <string name="logo">logo</string>
    <string name="enter_name">Enter Name</string>
    <string name="balance_information">Balance Information</string>
    <string name="name">Name</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="due_balance">Due Balance</string>
    <string name="due_months">Due Months</string>
    <string name="search_by_name">Search By Name</string>
    <string name="account">Account Information</string>
    <string name="ok">OK</string>
    <string name="do_you_want_to_logout_the_application">Do you Want to Logout the Application?</string>
    <string name="no">No</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="iamge_upload">Upload/Change Image</string>
    <string name="meal_board">Meal Board</string>
    <string name="bazaar_approval">Meal Approval</string>
    <string name="meal_approval">Meal Approval</string>
    <string name="add_daily_meal">Add Your Daily Meal</string>
    <string name="add_daily_bazar_cost">Add Your Daily Bazaar Cost</string>
    <string name="add_monthly_cost">Add Monthly Cost</string>
    <string name="select_your_profile_image">Select Your Profile Image</string>
    <string name="update_image">Update Image</string>
    <string name="welcome">Welcome to</string>
    <string name="total_balnace">Total Balnace</string>
    <string name="statement">Statement</string>
    <string name="condition">Condition</string>
    <string name="contact">Contact</string>
    <string name="notifications">Notifications</string>
    <string name="developer">Developer</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="password_change">Password Change</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="new_total">New Total</string>
    <string name="total_meal">Total Meal</string>
    <string name="total_meal_cost">Total Meal Cost</string>
    <string name="total_shopping_cost">Total Shopping Cost</string>
    <string name="launch">Launch</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="date">Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="please_input_your_daily_bazaar_cost">Please Input Your Daily Bazaar Cost</string>
    <string name="please_enter_product_details">Please Enter Product Details</string>
    <string name="bazaar">Total Bazaar</string>
    <string name="bazaar_t">Bazaar</string>
    <string name="available_balance">Available Balance</string>
    <string name="total_deposit_amount">Total Deposit Amount</string>
    <string name="total_cost">Total Cost</string>
    <string name="per_meal_cost">Per Meal Cost</string>
    <string name="total_breakfast">Total Breakfast Meal</string>
    <string name="total_launch_meal">Total Launch Meal</string>
    <string name="total_diner_meal">Total Diner Meal</string>
    <string name="total_information">Total Information</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_bazaar_cost">Add Bazaar Cost</string>
    <string name="product_details">Product Details</string>
    <string name="submit">Submit</string>
    <string name="my_meal_info">My Meal Info</string>
    <string name="status">Status</string>
    <string name="payment">Payment</string>
    <string name="meal">Meal</string>
    <string name="my_total_bazaar_info">My Total Bazaar Info</string>
    <string name="months">Month</string>
    <string name="house_rent">House Rent</string>
    <string name="city_cor_bill">City Cor. Bill</string>
    <string name="elictricity">Electricity Bill</string>
    <string name="bua">Bua Bill</string>
    <string name="others_bill">Others Bill</string>
    <string name="update">Update</string>
    <string name="meal_information">Meal Information</string>
    <string name="monthly_mess_bill_information">Monthly Mess Bill Information</string>
    <string name="this_is_mobile_generated_invoice">This is mobile generated Invoice.</string>
    <string name="save_invoice">Save Invoice</string>
    <string name="cancel">Cancel</string>
    <string name="personal_information">Personal Information</string>
    <string name="total_bill">Total Bill</string>


    <string-array name="spinnerItems">
        <item>-Select-</item>
        <item>Bank Asia</item>
        <item>City Bank</item>
        <item>bKash</item>
        <item>Rocket</item>
        <item>Cash</item>
        <item>DBBL</item>
        <item>IBBL</item>
        <item>Nagad</item>
        <item>Other</item>

    </string-array>


</resources>

