<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/account_detail_padding_base">


                        <TextView
                            android:id="@+id/tv_date_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/date"
                            android:textSize="@dimen/account_balance_label_textsize_base" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textSize="@dimen/textsize_base" />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/divider_height_base"
                        android:layout_height="match_parent"
                        android:background="@color/stoke_color_account_detail" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/account_detail_padding_base">

                        <TextView
                            android:id="@+id/tv_total_amount_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_amount"
                            android:textSize="@dimen/account_balance_label_textsize_base" />

                        <TextView
                            android:id="@+id/tv_total_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textSize="@dimen/textsize_base" />


                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height_base"
                    android:layout_margin="0dp"
                    android:background="@color/stoke_color_account_detail"
                    android:padding="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/account_detail_padding_base">

                        <TextView
                            android:id="@+id/tv_email_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/email"
                            android:textSize="@dimen/account_balance_label_textsize_base" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textSize="@dimen/textsize_base" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height_base"
                    android:layout_margin="0dp"
                    android:background="@color/stoke_color_account_detail"
                    android:padding="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/account_detail_padding_base">

                        <TextView
                            android:id="@+id/tv_product_details_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/product_details"
                            android:textSize="@dimen/account_balance_label_textsize_base" />

                        <TextView
                            android:id="@+id/tv_product_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zero"
                            android:textSize="@dimen/textsize_base" />
                    </LinearLayout>


                </LinearLayout>

            </TableLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/account_detail_padding_base">

            <Button
                android:id="@+id/btn_approved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/approved"
                android:textSize="@dimen/account_balance_label_textsize_base" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/account_detail_padding_base">

            <Button
                android:id="@+id/btn_declined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/declined"
                android:textSize="@dimen/account_balance_label_textsize_base" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>