<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddBazarCost">


    <include layout="@layout/header_general" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/content_minus_top_base"
        android:layout_weight=".1"
        android:background="@drawable/back"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_30"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tv_registration_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/please_input_your_daily_bazaar_cost"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <LinearLayout

                        android:id="@+id/ll3rd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="15dp"
                            android:visibility="visible"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="5dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:gravity="center_horizontal"
                                        android:orientation="horizontal"
                                        android:padding="@dimen/padding_5"
                                        android:weightSum="3">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:gravity="center_vertical"
                                            android:text="@string/date"
                                            android:textColor="@color/black" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text=":"
                                            android:textColor="@color/black" />

                                        <EditText
                                            android:id="@+id/date_value"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:background="@drawable/rectangale"
                                            android:clickable="false"
                                            android:cursorVisible="false"
                                            android:focusable="false"
                                            android:focusableInTouchMode="false"
                                            android:gravity="center"
                                            android:hint="@string/date"
                                            android:inputType="date"
                                            android:textColor="@color/black" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="50dp"
                                        android:gravity="center_horizontal"
                                        android:orientation="horizontal"
                                        android:padding="@dimen/padding_5"
                                        android:weightSum="3">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:gravity="center_vertical"
                                            android:text="@string/total_amount"
                                            android:textColor="@color/black" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:text=":"
                                            android:textColor="@color/black" />

                                        <EditText
                                            android:id="@+id/amount_value"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:background="@drawable/rectangale"
                                            android:gravity="center"
                                            android:hint="@string/total_amount"
                                            android:inputType="numberDecimal"
                                            android:textColor="@color/black" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_horizontal"
                                        android:orientation="vertical"
                                        android:padding="@dimen/padding_5"
                                        android:weightSum="3">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginBottom="@dimen/margin_5"
                                            android:layout_weight="1"
                                            android:gravity="center_vertical"
                                            android:text="Product Details"
                                            android:textColor="@color/black" />


                                        <EditText
                                            android:id="@+id/product_details_value"
                                            android:layout_width="match_parent"
                                            android:layout_height="100dp"
                                            android:layout_weight="1"
                                            android:background="@drawable/rectangale"
                                            android:gravity="left"
                                            android:hint="@string/please_enter_product_details"
                                            android:inputType="text"
                                            android:padding="@dimen/padding_5"
                                            android:textColor="@color/black" />

                                    </LinearLayout>


                                </LinearLayout>

                                <Button
                                    android:id="@+id/btnSubmit"
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:layout_margin="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/round_corner"
                                    android:text="Submit"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:visibility="visible" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <include layout="@layout/row_report_daily_bazaar" />
                </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>